--- a/public/styles/sass/main.scss
+++ b/public/styles/sass/main.scss
@@ -1,34 +1,58 @@
-@import "normalize.css";
+@import "../vendor/normalize.css";
+@import url(http://fonts.googleapis.com/css?family=Coming+Soon);
 
+* {
+	box-sizing: border-box;
+}
 body {
 	background: #333;
+	color: #555;
+	font-family: 'Coming Soon', cursive;
 }
 main {
 	overflow: hidden;
-	background: #EEE;
-	&.aspect-16-9 {
-		position: relative;
-		&:before {
-			display: block;
-			content: "";
-			width: 100%;
-			padding-top: (9 / 16) * 100%;
-		}
-		> .content {
-			position: absolute;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			display: flex;
-		}
-	}
-	section {
-		flex: 1 1;
-		canvas {
-			background: #FFF;
-			border: 1px solid red;
-			box-sizing: border-box;
-		}
+	background: yellow;
+	&.fit-to-window {
+		position: fixed;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
 	}
 }
+section {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: #FFF;
+	&.base-layer {
+		
+	}
+	&.overlay {
+		display: none;
+	}
+}
+canvas {
+	background: #FFF;
+	border: 0;
+	margin: 0;
+	display: block;
+}
+label {
+	font-weight: bold;
+	span {
+		font-size: 0.8em;
+		color: #888;
+		font-weight: normal;
+	}
+}
+.button {
+	display: block;
+	border: 0;
+	background: #888;
+	color: #FFF;
+	text-transform: uppercase;
+	margin: 0;
+	font-weight: normal;
+}
+
