--- a/public/styles/sass/sender.scss
+++ b/public/styles/sass/sender.scss
@@ -17,26 +17,13 @@ h3 {
 }
 
 #user-drawing {
-	#phrase {
+	#phrase-block {
 		width: 100%;
 		height: $phrase-height;
 		font-size: 3vh;
 		text-align: center;
 		background: #999;
 		color: #FFF;
-		white-space: nowrap;
-		&::before {
-			content: "";
-			height: 100%;
-			vertical-align: middle;
-			display: inline-block;
-			margin-right: -10px;
-		}
-		span {
-			vertical-align: middle;
-			display: inline-block;
-			white-space: normal;
-		}
 	}
 	#timer-bar {
 		width: $timer-width;
@@ -72,12 +59,12 @@ h3 {
 		padding: 0;
 		margin: 0;
 		font-size: 4vh;
-		background: #5EDBB0;
+		background: #64CCA8;
 	}
 }
 
 #user-login {
-	display: block;
+	//display: block;
 	#form-login {
 		width: 70%;
 		margin: 10% auto;
@@ -101,7 +88,7 @@ h3 {
 }
 
 #user-ready {
-	//display: block;
+	display: block;
 	background: rgba(255,255,255,0.6);
 	padding: 15%;
 	button {
