--- a/views/reciever.html
+++ b/views/reciever.html
@@ -41,7 +41,7 @@
 			<section class="overlay" id="display-info">
 				<div id="info-container">
 					<h1 id="info-1">
-						username's turn! username wins!
+						username's turn! username wins! insult
 					</h1>
 					<h2 id="info-2">
 						*hint: look at your phone new game?
@@ -135,18 +135,18 @@
 						<div class="left-label">
 							<label for="time-limit">
 								Time Limit
-								<span>
-									(sec)
-								</span>
 							</label>
 							<input type="number" id="time-limit" value="60" min="30" max="300">
+							<p class="setting-info">
+								Between 30 and 300 seconds
+							</p>
 						</div>
 						<div class="left-label">
 							<label for="hard-mode">
 								Hard Mode
 							</label>
 							<input type="checkbox" id="hard-mode">
-							<p id="hard-mode-info">
+							<p class="setting-info">
 								Only shows the drawing on the TV (lol)
 							</p>
 						</div>
