--- a/views/sender.html
+++ b/views/sender.html
@@ -35,7 +35,7 @@
 						I'm bad at drawing, skip
 					</button>
 				</div>
-				<button type="button" class="button" id="correct">
+				<button type="button" class="button" id="next">
 					Next
 				</button>
 			</section>
@@ -77,18 +77,18 @@
 					100 points for each drawing
 				</h3>
 				<h3>
-					50 points for guessing correctly
+					50 points to the correct guesser
 				</h3>
 				<h3>
 					-10 points for skipping a phrase
 				</h3>
 				<button type="submit" class="button" id="join">
-					Let's Go!
+					Let's Go
 				</button>
 			</section>
 			<section class="overlay" id="user-wait">
 				<h1>
-					*hint: look at the TV and yell words
+					*hint: look at the TV
 				</h1>
 			</section>
 			<section class="overlay" id="user-new-game">
@@ -96,11 +96,11 @@
 					New Game?
 				</h1>
 				<form id="form-new-game">
-					<button type="button" class="button" id="new-players">
-						New Players
+					<button type="button" class="button" id="new-game">
+						Yes, this game is great and so is Eric
 					</button>
-					<button type="button" class="button" id="same-players">
-						Same Players
+					<button type="button" class="button" id="also-new-game">
+						OK, but I'm gonna complain the whole time
 					</button>
 				</form>
 			</section>
