--- a/public/styles/css/sender.css
+++ b/public/styles/css/sender.css
@@ -93,7 +93,7 @@ h3 {
     margin: 5%;
     padding: 3%; }
 
-#user-drawing #correct {
+#user-drawing #next {
   display: block;
   width: 100%;
   height: 10%;
@@ -121,28 +121,32 @@ h3 {
 #user-ready {
   display: block;
   background: rgba(255, 255, 255, 0.6);
-  padding: 15%; }
+  padding: 10% 15%; }
   #user-ready button {
     font-size: 3vh;
     width: 60%;
     margin: 20% auto;
     padding: 4%; }
-  #user-ready #timer-info::before {
-    content: "";
-    display: block;
-    position: absolute;
-    margin-left: -1.5em;
-    width: 0;
-    height: 0;
-    border-top: 1.2em solid transparent;
-    border-bottom: 1.2em solid transparent;
-    border-right: 0.8em solid #CCC;
-    -webkit-transform: scale(0.9999);
-        -ms-transform: scale(0.9999);
-            transform: scale(0.9999); }
+  #user-ready #timer-info {
+    margin-bottom: 2em; }
+    #user-ready #timer-info::before {
+      content: "";
+      display: block;
+      position: absolute;
+      margin-left: -1.5em;
+      width: 0;
+      height: 0;
+      border-top: 1em solid transparent;
+      border-bottom: 1em solid transparent;
+      border-right: 0.8em solid #CCC;
+      -webkit-transform: scale(0.9999);
+          -ms-transform: scale(0.9999);
+              transform: scale(0.9999); }
 
-#user-new-game button {
-  margin: 20% auto;
-  padding: 10%;
-  width: 80%;
-  font-size: 3vh; }
+#user-new-game {
+  display: block; }
+  #user-new-game button {
+    margin: 10% auto;
+    padding: 8%;
+    width: 80%;
+    font-size: 3vh; }
