--- a/views/reciever.html
+++ b/views/reciever.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>
-			I Can't Draw That
+			I Can't Draw That - TV
 		</title>
 		
 		<link href="static/styles/css/reciever.css" rel="stylesheet" type="text/css">
@@ -56,30 +56,6 @@
 					</span>
 				</h1>
 				<div id="score-container">
-					<p>
-						username
-						<span>
-							500
-						</span>
-					</p>
-					<p>
-						username
-						<span>
-							500
-						</span>
-					</p>
-					<p>
-						username
-						<span>
-							500
-						</span>
-					</p>
-					<p>
-						username
-						<span>
-							500
-						</span>
-					</p>
 					<p>
 						username
 						<span>
@@ -180,6 +156,7 @@
 		
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="static/scripts/main.js"></script>
+		<script src="static/scripts/reciever.js"></script>
 		
 	</body>
 </html>
