--- a/public/styles/sass/reciever.scss
+++ b/public/styles/sass/reciever.scss
@@ -65,13 +65,13 @@
 }
 #display-players {
 	display: block;
-	z-index: 1;
+	//z-index: 1;
 	h1 {
 		font-size: 4.5vw;
 		text-align: center;
 	}
 	#room-big {
-		letter-spacing: 10px;
+		letter-spacing: 0.3em;
 	}
 	#score-container {
 		display: flex;
@@ -176,7 +176,7 @@
 	font-size: 2vw;
 	font-weight: bold;
 	#room-small {
-		letter-spacing: 5px;
+		letter-spacing: 0.35em;
 	}
 }
 
