--- a/views/reciever.html
+++ b/views/reciever.html
@@ -155,7 +155,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 		
 		<script src="/socket.io/socket.io.js"></script>
-		<script src="static/scripts/main.js"></script>
+		<!--<script src="static/scripts/main.js"></script>-->
 		<script src="static/scripts/reciever.js"></script>
 		
 	</body>
