--- a/public/styles/css/sender.css
+++ b/public/styles/css/sender.css
@@ -47,6 +47,9 @@ label {
   text-transform: uppercase;
   margin: 0;
   font-weight: normal; }
+  .button:disabled {
+    color: #CCC;
+    text-decoration: line-through; }
 
 h1 {
   text-align: center;
@@ -102,25 +105,8 @@ h3 {
   font-size: 4vh;
   background: #64CCA8; }
 
-#user-login {
-  display: block; }
-  #user-login #form-login {
-    width: 70%;
-    margin: 10% auto;
-    font-size: 3vh; }
-    #user-login #form-login label, #user-login #form-login input, #user-login #form-login button {
-      display: block;
-      width: 100%; }
-    #user-login #form-login label {
-      margin-bottom: 2%; }
-    #user-login #form-login input {
-      border: 2px solid #DDD;
-      padding: 0.5em;
-      margin-bottom: 8%; }
-    #user-login #form-login button {
-      padding: 0.75em; }
-
 #user-ready {
+  display: block;
   background: rgba(255, 255, 255, 0.6);
   padding: 10% 15%; }
   #user-ready button {
@@ -144,11 +130,37 @@ h3 {
           -ms-transform: scale(0.9999);
               transform: scale(0.9999); }
 
-#user-info h2 {
-  text-align: center; }
-
 #user-new-game button {
   margin: 10% auto;
   padding: 8%;
   width: 80%;
   font-size: 3vh; }
+
+#user-info h2 {
+  text-align: center; }
+
+#user-login {
+  display: block; }
+  #user-login #form-login {
+    width: 70%;
+    margin: 10% auto;
+    font-size: 3vh; }
+    #user-login #form-login label, #user-login #form-login input, #user-login #form-login button {
+      display: block;
+      width: 100%; }
+    #user-login #form-login label {
+      margin-bottom: 2%; }
+    #user-login #form-login input {
+      border: 2px solid #DDD;
+      padding: 0.5em;
+      margin-bottom: 8%; }
+    #user-login #form-login button {
+      padding: 0.75em; }
+    #user-login #form-login #room-code {
+      text-transform: uppercase;
+      letter-spacing: 0.3em; }
+
+#user-loading {
+  background: rgba(255, 255, 255, 0.6); }
+  #user-loading .center {
+    margin: 50% auto; }
