--- a/views/reciever.html
+++ b/views/reciever.html
@@ -52,7 +52,7 @@
 				<h1 id="display-players-header">
 					Scoreboard Room Code:
 					<span id="room-big">
-						UWBF
+						TEST
 					</span>
 				</h1>
 				<div id="score-container">
@@ -143,7 +143,7 @@
 			<div id="display-room-code">
 				Room Code:
 				<span id="room-small">
-					UWBF
+					TEST
 				</span>
 			</div>
 		</main>
