--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -47,3 +47,6 @@ label {
   text-transform: uppercase;
   margin: 0;
   font-weight: normal; }
+  .button:disabled {
+    color: #CCC;
+    text-decoration: line-through; }
